# ParallelLabs

./: .gitignore  CMakeLists.txt  README.md
ParallelLab1/: CMakeLists.txt  README.md  main.c
ParallelLab1/include/: Utils.h  Vector.h
ParallelLab1/src/: Utils.c  Vector.c
ParallelLab2/: CMakeLists.txt  README.md  main.c
ParallelLab2/include/: Bonus.h
ParallelLab2/src/: Bonus.c
ParallelLab3/: CMakeLists.txt  README.md  main.c
ParallelLab3/include/: Array.h  ErrorCode.h  Helpers.h  ProcessInfo.h  RankProcedures.h  Utils.h  WrapperMPI.h
ParallelLab3/src/: Array.c  RankProcedures.c  Utils.c  WrapperMPI.c
ParallelLab4/: CMakeLists.txt  README.md  main.c
ParallelLab4/include/: Matrix.h  ProcessProcedures.h  Utils.h  WrapperMPI.h
ParallelLab4/src/: Matrix.c  ProcessProcedures.c
ParallelLab5/: CMakeLists.txt  README.md  main.c
ParallelLabN/: CMakeLists.txt  main.c
ParallelLabN/include/: ReadFile.h
ParallelLabN/src/: Helpers.c  ProcessInfo.c  ReadFile.c
